config file, scss fix, collapse fix

--- a/components/Sidebar/style.module.scss
+++ b/components/Sidebar/style.module.scss
@@ -3,8 +3,10 @@
 .Sidebar {
   width: 200px;
   height: 100vh;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
   position: fixed;
+
   background-color: #fff;
   z-index: 1;
 
@@ -20,6 +22,11 @@
     padding-top: 89px;
   }
 
+  box-shadow: 2px 0 8px #00000050;
+  > *:last-child {
+    box-shadow: 2px 0 8px #00000050;
+  }
+
   .List {
     padding: 0;
 
@@ -30,20 +37,22 @@
   }
 
   .Rating {
-    width: 100%;
-    margin-top: 50px;
+    width: 200px;
+    // margin-top: 50px;
     position: absolute;
     bottom: 50px;
     background-color: #fff;
 
     .RateBlock {
+      max-height: 200px;
+
       .InfoBlock {
         width: 100%;
         height: 50px;
         display: flex;
         align-items: center;
-        gap: 0.5rem;
         justify-content: space-between;
+        gap: 0.5rem;
         margin-bottom: 0.5rem;
 
         .Title {
